<resources>
    <string name="app_name">Tourista App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="tourista">Tourista!</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_text">Welcome to </string>
    <string name="welcome_desc">Tourista will help you discover amazing places around Indonesia, from beautiful beaches to thrilling nature adventures. Join  with us and start your amazing experience with Tourista!</string>
    <string name="login_image_desc">This is login image</string>
    <string name="login_text">Login</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Input your email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Input your password</string>
    <string name="dont_have_account">Don\'t have account? Register now</string>
    <string name="register_text">Register</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Input your username</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="destination_name">Destination Name</string>
    <string name="destination_location">Destination Location</string>
    <string name="destination_decription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non consequat ex. Nullam elit libero, commodo sit amet aliquet sit amet, vulputate eget massa. Praesent consectetur lorem ac odio viverra ullamcorper.</string>
    <string name="user_greeting">Hi,</string>
    <string name="home_greeting">Where are you planning to go today?</string>
    <string name="search_hint">Search</string>
    <string name="popular_destination_label">Popular Destination</string>
    <string name="near_destination_label">Destination near you</string>
    <string name="pick_location_label">Pick your location</string>
    <string name="use_my_location_label">Use my location</string>
    <string name="pick_categories_label">Pick your categories</string>
    <string name="pick_price_label">Choose budget range</string>
    <string name="price_hint">Rp</string>
    <string name="need_acommodation_label">Need acommodation?</string>
    <string name="yes_acommodation">Yes</string>
    <string name="search_now">Search Now</string>
    <string name="rating">4.5</string>
    <string name="review_decription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="help_center_label">Help Center</string>
    <string name="logout_text">Log Out</string>
    <string name="review_label">Review</string>
    <string name="umkm_label">Business around you</string>
    <string name="name_label">Name</string>
    <string name="age_label">Age</string>
    <string name="phone_number_label">Phone number</string>
    <string name="address_label">Address</string>
    <string name="trip_type">Trip type</string>
    <string-array name="near_name">
        <item>Desa Wisata Sungai Code Jogja Kota</item>
        <item>Tugu Pal Putih Jogja</item>
        <item>Nol Kilometer Jl.Malioboro</item>
        <item>Keraton Yogyakarta</item>
    </string-array>
    <string-array name="near_city">
        <item>Yogyakarta</item>
        <item>Yogyakarta</item>
        <item>Yogyakarta</item>
        <item>Yogyakarta</item>

    </string-array>
    <string-array name="near_photo">
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>

    </string-array>
    <string-array name="near_description">
        <item>Kampung Code berada di Kelurahan Kotabaru Kecamatan Gondokusuman Kota Yogyakarta Lokasi persisnya ada di RT 01RW 01 di sebelah selatan jembatan Gondolayu di Jl Jenderal Sudirman atau di sebelah timur bantaran Kali Code yang membelah Kota Yogyakarta Kampung Code terletak persis di bantaran Kali Code yang memanjang ke arah selatan dengan kontur tanah bertebing dari atas ke bawah Di bagian atas yang mepet Jl Faridan M Noto sebagian besar digunakan warga untuk usaha jasajual beli ban mobil Sedangkan di bagian bawah menjadi tempat pemukiman warga Kampung Code yang tadinya kampung biasa menjelma menjadi sebuah karya seni berkat jasa seorang arsitek sekaligus pemuka agama katolik Romo YB Manguwijaya.</item>
        <item>Tugu Yogyakarta Jawa  Tugu Ngayogyakarta adalah sebuah landmark bersejarah yang penting di kota Yogyakarta Indonesia Tugu berarti tugu yang biasanya dibangun sebagai simbol suatu kawasan yang mengkonseptualisasikan ciriciri kawasan tersebut Karena latar belakang sejarahnya Tugu Yogyakarta telah menjadi ikon sejarah kota Tugu Yogyakarta terletak tepat di tengah persimpangan antara Jalan Mangkubumi Jalan Sudirman Jalan AM Sangaji dan Jalan Dipenogoro kota.</item>
        <item>Walaupun hanyalah sebuah persimpangan namun persimpangan Titik 0 km ini bukanlah sebuah persimpangan biasa Karena di persimpangan ini bisa dibilang sebagai titik tengah kota Jogja karena lokasinya yang benarbenar di depan Keraton Yogyakarta sebagai pendiri daerah yang istimewa ini Terlebih lagi di sebelah utaranya adalah pusat keramaian wisata Jogja yaitu Jalan Malioboro sehingga jika anda sedang nongkrong di persimpangan Titik Nol Kilometer ini benarbenar merasakan titik tengah Jogja yang begitu syahdu Titik 0 Kilometer Yogyakarta memang tempat favorit wisatawan untuk menghabiskan waktu terlebih pada sore hari dan malam hari yang setiap hari selalu ramai disesaki oleh para wisatawan yang sekedar hanya untuk nongkrong di dudukan yang banyak disediakan di sekitar perempatan.</item>
        <item>Keraton Ngayogyakarta Hadiningrat atau Keraton Yogyakarta bahasa Jawa translit Karaton Ngayogyakarta Hadiningrat merupakan istana resmi Kesultanan Ngayogyakarta Hadiningrat yang kini berlokasi di Kota Yogyakarta Keraton ini didirikan oleh Sri Sultan Hamengkubuwana I pada tahun 1755 sebagai IstanaKeraton Yogyakarta yang baru berdiri akibat perpecahan Mataram Islam dengan adanya Perjanjian Giyanti Keraton ini adalah pecahan dari Keraton Surakarta Hadiningrat dari Kesunanan Surakarta Kerajaan Surakarta Sehingga dinasti Mataram diteruskan oleh 2 Kerajaan yakni Kesultanan Yogyakarta dan Kesunanan Surakarta Total luas wilayah keseluruhan keraton yogyakarta mencapai 184 hektar yakni meliputi seluruh area di dalam benteng Baluwarti alunalun Lor alunalun Kidul gapura Gladak dan kompleks Masjid Gedhe Yogyakarta Sementara luas dari kedhaton inti keraton mencapai 13 hektar Walaupun Kesultanan Yogyakarta secara resmi telah menjadi bagian Republik Indonesia pada tahun 1945 kompleks bangunan keraton ini masih berfungsi sebagai tempat tinggal sultan dan rumah tangga istananya yang masih menjalankan tradisi kesultanan hingga saat ini Keraton ini kini juga merupakan salah satu objek wisata di Kota Yogyakarta Sebagian kompleks keraton merupakan museum yang menyimpan berbagai koleksi milik kesultanan termasuk berbagai pemberian dari rajaraja Eropa replika pusaka keraton dan gamelan Dari segi bangunannya keraton ini merupakan salah satu contoh arsitektur istana Jawa yang terbaik memiliki balairungbalairung mewah dan lapangan serta paviliun yang luas.</item>
    </string-array>
    <string-array name="review_username">
        <item>Makima</item>
        <item>Ujikkk</item>
        <item>Ujik_ganteng</item>
    </string-array>
    <string-array name="user_rating">
        <item>4.5</item>
        <item>4.3</item>
        <item>3.5</item>
    </string-array>
    <string-array name="review_photo_username">
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
    </string-array>
    <string-array name="umkm_name">
        <item>Toko Pak Sabar</item>
        <item>Soto Pak Cholili</item>
        <item>Warung Bu Mala</item>
    </string-array>
    <string-array name="umkm_owner">
        <item>Pak Sabar</item>
        <item>Pak Cholili</item>
        <item>Bu Mala</item>
    </string-array>
    <string-array name="umkm_photo">
        <item>https://cdn-image.hipwee.com/wp-content/uploads/2021/07/hipwee-Untitled-design-14.png</item>
        <item>https://salimahcatering.my.id/wp-content/uploads/2020/02/Soto-Ayam-P-Cholili.png</item>
        <item>https://lh3.googleuserconten.com/p/AF1QipNt-sKHwf89vn4S8X3aB8EY_ZtxmdBvIqQKKW0N=s1360-w1360-h1020</item>
    </string-array>
    <string-array name="similiar_name">
        <item>Kawasan Kuliner BSM</item>
        <item>Wisata Alam Wana Wisata Penggaron</item>
        <item>Kampung Wisata Kadipaten</item>
        <item>Desa Wisata Gamplong</item>
    </string-array>
    <string-array name="similiar_city">
        <item>Jakarta</item>
        <item>Semarang</item>
        <item>Yogyakarta</item>
        <item>Yogyakarta</item>
    </string-array>
    <string-array name="similiar_photo">
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
    </string-array>
    <string-array name="recresult_name">
        <item>Wisata Agro Edukatif Istana Susu Cibugary</item>
        <item>Jakarta Planetarium</item>
        <item>Taman Menteng</item>
        <item>Jakarta Planetarium</item>
        <item>Hutan Kota Srengseng</item>
        <item>Taman Menteng</item>
        <item>Wisata Agro Edukatif Istana Susu Cibugary</item>
        <item>Hutan Kota Srengseng</item>
        <item>Taman Menteng</item>
    </string-array>
    <string-array name="recresult_type">
        <item>Gold</item>
        <item>Gold</item>
        <item>Gold</item>
        <item>Silver</item>
        <item>Silver</item>
        <item>Silver</item>
        <item>Bronze</item>
        <item>Bronze</item>
        <item>Bronze</item>
    </string-array>
    <string-array name="recresult_photo">
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
        <item>https://storage.googleapis.com/tourista_bucket/tourista_logo_large.png</item>
    </string-array>
</resources>