<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.explore.ExploreFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_location_label"
            style="@style/Label.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_location_label"
            android:textColor="@color/black"
            android:textFontWeight="700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/sw_use_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/use_my_location_label"
            app:layout_constraintStart_toStartOf="@+id/tv_location_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_label" />

        <Spinner
            android:id="@+id/spinner_city"
            style="@style/SpinnerStyle"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_use_location" />

        <TextView
            android:id="@+id/tv_categories_label"
            style="@style/Label.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pick_categories_label"
            android:textColor="@color/black"
            android:textFontWeight="700"
            app:layout_constraintStart_toStartOf="@id/spinner_city"
            app:layout_constraintTop_toBottomOf="@id/spinner_city" />

        <Spinner
            android:id="@+id/spinner_categories"
            style="@style/SpinnerStyle"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_categories_label"
            app:layout_constraintStart_toStartOf="@+id/tv_categories_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_categories_label" />

        <TextView
            android:id="@+id/tv_price_label"
            style="@style/Label.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pick_price_label"
            android:textColor="@color/black"
            android:textFontWeight="700"
            app:layout_constraintEnd_toEndOf="@+id/spinner_categories"
            app:layout_constraintStart_toStartOf="@+id/spinner_categories"
            app:layout_constraintTop_toBottomOf="@+id/spinner_categories" />

        <EditText
            style="@style/EditTextGeneral"
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/price_hint"
            app:layout_constraintEnd_toEndOf="@+id/tv_price_label"
            app:layout_constraintStart_toStartOf="@+id/tv_price_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_label" />

        <TextView
            style="@style/Label.Large"
            android:id="@+id/tv_acommodation_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/need_acommodation_label"
            app:layout_constraintStart_toStartOf="@+id/editTextNumber"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/yes_acommodation"
            app:layout_constraintStart_toStartOf="@+id/tv_acommodation_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_acommodation_label" />

        <Button
            android:id="@+id/button2"
            style="@style/ButtonGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:text="@string/search_now"
            app:layout_constraintStart_toStartOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>