<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="wrap_content"
        android:layout_height="287dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_image" />

    <TextView
        style="@style/Title.Large"
        android:textColor="@color/black"
        android:id="@+id/tv_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_text"
        app:layout_constraintStart_toStartOf="@+id/iv_login"
        app:layout_constraintTop_toBottomOf="@+id/iv_login" />

    <TextView
        style="@style/Label.Large"
        android:textColor="@color/black"
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/email_label"
        app:layout_constraintStart_toStartOf="@+id/tv_login_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_text" />

    <EditText
        style="@style/EditTextGeneral"
        android:id="@+id/et_email"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email_hint"
        app:layout_constraintStart_toStartOf="@+id/tv_email_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_label" />

    <TextView
        style="@style/Label.Large"
        android:textColor="@color/black"
        android:id="@+id/tv_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password_label"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        style="@style/EditTextGeneral"
        android:id="@+id/et_password"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        app:layout_constraintStart_toStartOf="@+id/tv_password_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonGeneral"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        style="@style/Label.Small"
        android:id="@+id/tv_goto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/blue_400"
        android:text="@string/dont_have_account"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>