<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tourista_register" />

        <TextView
            android:id="@+id/tv_tourista"
            style="@style/Headline.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tourista"
            android:textColor="@color/blue_400"
            app:layout_constraintEnd_toEndOf="@+id/iv_register"
            app:layout_constraintStart_toStartOf="@+id/iv_register"
            app:layout_constraintTop_toBottomOf="@+id/iv_register" />

        <TextView
            android:id="@+id/tv_register_text"
            style="@style/Title.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/plus_jkt_sans_semibold"
            android:text="@string/register_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_tourista"
            app:layout_constraintStart_toStartOf="@+id/tv_tourista"
            app:layout_constraintTop_toBottomOf="@+id/tv_tourista" />

        <LinearLayout
            android:id="@+id/linear_form_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_text"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/tv_username_label"
                style="@style/Label.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/username_label" />

            <EditText
                android:id="@+id/et_username"
                style="@style/EditTextRegister"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:paddingStart="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_form_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/linear_form_username"
            app:layout_constraintStart_toStartOf="@+id/linear_form_username"
            app:layout_constraintTop_toBottomOf="@+id/linear_form_username">

            <TextView
                android:id="@+id/tv_email_label"
                style="@style/Label.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/email_label" />

            <EditText
                android:id="@+id/et_email"
                style="@style/EditTextRegister"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_form_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/linear_form_email"
            app:layout_constraintStart_toStartOf="@+id/linear_form_email"
            app:layout_constraintTop_toBottomOf="@+id/linear_form_email">

            <TextView
                android:id="@+id/tv_password_label"
                style="@style/Label.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/password_label" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextRegister"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_form_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/linear_form_email"
            app:layout_constraintStart_toStartOf="@+id/linear_form_password"
            app:layout_constraintTop_toBottomOf="@+id/linear_form_password">

            <TextView
                android:id="@+id/tv_confirm_password_label"
                style="@style/Label.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/confirm_password_label" />

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/EditTextRegister"
                android:ems="10"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:paddingStart="16dp" />
        </LinearLayout>

        <Button
            style="@style/ButtonGeneral"
            android:background="@drawable/rounded_button"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/register_text"
            app:layout_constraintTop_toBottomOf="@+id/linear_form_confirm_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>