<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user"
            app:layout_constraintStart_toEndOf="@+id/iv_user"
            app:layout_constraintTop_toTopOf="@+id/iv_user">

            <TextView
                android:id="@+id/tv_username_label"
                style="@style/Title.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textColor="@color/black"
                android:textFontWeight="700" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/tv_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/review_decription" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>